feat: implement logging